# fastapi-nano-docker-poetry

./: .env  Dockerfile  README.md  build.sh  docker-compose.yml  docker_show_ip.sh  pyproject.toml  run_container.sh
app/: main.py
app/routes/: views.py
app/templates/: index.html
scripts/: 01_stop_containers.sh  02_volumes_delete.sh
